--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -85,7 +85,8 @@ body {
 }
 h2 {
     text-transform: uppercase;
-    font-size: 35px;
+    font-size: 50px;
+    text-align: center;
 }
 
 
@@ -237,7 +238,7 @@ section.Album-section p {
     background-size: cover;
 }
 .Family4 {
-    width: 25%;
+    width: 20%;
     height: 300px;
     display: inline-block;
     border-radius: 10px;
@@ -247,6 +248,161 @@ section.Album-section p {
     margin: 10px 15px;
     background-image: url('../images/fam7.jpeg');
     background-position: left;
+    background-size: cover;
+}
+.HS.Memories1 {
+    width: 20%;
+    height: 300px;
+    display: inline-block;
+    border-radius: 10px;
+    padding: 15px 25px;
+    cursor: pointer;
+    box-sizing: border-box;
+    margin: 10px 15px;
+    background-image: url('../images/HS1.jpg');
+    background-position: left;
+    background-size: cover;
+}
+.HS.Memories2 {
+    width: 29%;
+    height: 300px;
+    display: inline-block;
+    border-radius: 10px;
+    padding: 15px 25px;
+    cursor: pointer;
+    box-sizing: border-box;
+    margin: 10px 15px;
+    background-image: url('../images/HS2.jpg');
+    background-position: center;
+    background-size: cover;
+}
+.HS.Memories3 {
+    width: 16%;
+    height: 300px;
+    display: inline-block;
+    border-radius: 10px;
+    padding: 15px 25px;
+    cursor: pointer;
+    box-sizing: border-box;
+    margin: 10px 15px;
+    background-image: url('../images/HS4.jpg');
+    background-position: center;
+    background-size: cover;
+}.HS.Memories4 {
+    width: 25%;
+    height: 300px;
+    display: inline-block;
+    border-radius: 10px;
+    padding: 15px 25px;
+    cursor: pointer;
+    box-sizing: border-box;
+    margin: 10px 15px;
+    background-image: url('../images/HS6.jpg');
+    background-position: center;
+    background-size: cover;
+}
+.HS.Clubs1 {
+    width: 25%;
+    height: 300px;
+    display: inline-block;
+    border-radius: 10px;
+    padding: 15px 25px;
+    cursor: pointer;
+    box-sizing: border-box;
+    margin: 10px 15px;
+    background-image: url('../images/SSG.jpg');
+    background-position: center;
+    background-size: cover;
+}
+.HS.Clubs2 {
+    width: 20%;
+    height: 300px;
+    display: inline-block;
+    border-radius: 10px;
+    padding: 15px 25px;
+    cursor: pointer;
+    box-sizing: border-box;
+    margin: 10px 15px;
+    background-image: url('../images/SSG\ 2.jpg');
+    background-position: center;
+    background-size: cover;
+}
+.HS.Clubs3 {
+    width: 20%;
+    height: 300px;
+    display: inline-block;
+    border-radius: 10px;
+    padding: 15px 25px;
+    cursor: pointer;
+    box-sizing: border-box;
+    margin: 10px 15px;
+    background-image: url('../images/YES01.jpg');
+    background-position: center;
+    background-size: cover;
+}
+.HS.Clubs4 {
+    width: 25%;
+    height: 300px;
+    display: inline-block;
+    border-radius: 10px;
+    padding: 15px 25px;
+    cursor: pointer;
+    box-sizing: border-box;
+    margin: 10px 15px;
+    background-image: url('../images/YESO4.jpg');
+    background-position: center;
+    background-size: cover;
+}
+.Collage1 {
+    width: 30%;
+    height: 300px;
+    display: inline-block;
+    border-radius: 10px;
+    padding: 15px 25px;
+    cursor: pointer;
+    box-sizing: border-box;
+    margin: 10px 15px;
+    background-image: url('../images/collage2.jpeg');
+    background-position: center;
+    background-size: cover;
+}
+.Collage2 {
+    width: 20%;
+    height: 300px;
+    display: inline-block;
+    border-radius: 10px;
+    padding: 15px 25px;
+    cursor: pointer;
+    box-sizing: border-box;
+    margin: 10px 15px;
+    background-image: url('../images/collage1.jpeg');
+    background-position: center;
+    background-size: cover;
+}
+.Collage3 {
+    width: 20%;
+    height: 300px;
+    display: inline-block;
+    border-radius: 10px;
+    padding: 15px 25px;
+    cursor: pointer;
+    box-sizing: border-box;
+    margin: 10px 15px;
+    background-image: url('../images/collage4.jpeg');
+    background-position: center;
+    background-size: cover;
+}
+.Collage4 {
+    width: 20%;
+    height: 300px;
+    display: inline-block;
+    border-radius: 10px;
+    padding: 15px 25px;
+    cursor: pointer;
+    box-sizing: border-box;
+    margin: 10px 15px;
+    background-image: url('../images/collage5.jpeg');
+    background-position: center;
     background-size: cover;
 }
 
