--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -14,9 +14,6 @@ html body {
     width: 1000px;
     margin: 0 auto;
 }
-header {
-    background-image: url('../images/background\ sunset.jpg');
-}
 .left img {
     width: 100px;
 }
@@ -167,6 +164,59 @@ section.about-section {
     width: 105%;
     border-radius: 100%;
 }
+
+/* Bootstrap Album*/
+.bd-placeholder-img {
+    font-size: 1.125rem;
+    text-anchor: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+  }
+
+  @media (min-width: 768px) {
+    .bd-placeholder-img-lg {
+      font-size: 3.5rem;
+    }
+  }
+
+  .b-example-divider {
+    height: 3rem;
+    background-color: rgba(0, 0, 0, .1);
+    border: solid rgba(0, 0, 0, .15);
+    border-width: 1px 0;
+    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+  }
+
+  .b-example-vr {
+    flex-shrink: 0;
+    width: 1.5rem;
+    height: 100vh;
+  }
+
+  .bi {
+    vertical-align: -.125em;
+    fill: currentColor;
+  }
+
+  .nav-scroller {
+    position: relative;
+    z-index: 2;
+    height: 2.75rem;
+    overflow-y: hidden;
+  }
+
+  .nav-scroller .nav {
+    display: flex;
+    flex-wrap: nowrap;
+    padding-bottom: 1rem;
+    margin-top: -1px;
+    overflow-x: auto;
+    text-align: center;
+    white-space: nowrap;
+    -webkit-overflow-scrolling: touch;
+  }
+
 
 
 /* Album Styles*/
@@ -406,7 +456,7 @@ section.Album-section p {
     background-size: cover;
 }
 
-/* Skills Styles*/
+/* Favorite Styles
 section.skills-section h2 {
     text-align: center;
     padding-right: 145px;
@@ -437,10 +487,67 @@ section.skills-section .row {
 section.skills-section .row-2 {
     margin-top: 40px;
     margin-left: 40px;
+}*/
+
+/*favorite Styles*/
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
+}
+
+.b-example-divider {
+  height: 3rem;
+  background-color: rgba(0, 0, 0, .1);
+  border: solid rgba(0, 0, 0, .15);
+  border-width: 1px 0;
+  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+}
+
+.b-example-vr {
+  flex-shrink: 0;
+  width: 1.5rem;
+  height: 100vh;
+}
+
+.bi {
+  vertical-align: -.125em;
+  fill: currentColor;
+}
+
+.nav-scroller {
+  position: relative;
+  z-index: 2;
+  height: 2.75rem;
+  overflow-y: hidden;
+}
+
+.nav-scroller .nav {
+  display: flex;
+  flex-wrap: nowrap;
+  padding-bottom: 1rem;
+  margin-top: -1px;
+  overflow-x: auto;
+  text-align: center;
+  white-space: nowrap;
+  -webkit-overflow-scrolling: touch;
 }
 
 
+
 /* Contact Styles */
+header#contacts {
+    background-image: url('../images/pink.jpg');
+
+}
 section#contact {
     background-size: cover;
     background-attachment: inherit;
@@ -517,21 +624,6 @@ footer {
 section.footer-1 {
     margin-left: 75px;
 }   
-section.footer-1 .col {
-    vertical-align: top;
-    display: inline-block;
-    width: 33%;
-    padding-left: 420px;
-    text-align: center;
-}
-section.footer-1 .col ul li img {
-    width: 100px;
-    margin-top: 10px;
-}
-section.footer-1 .col ul li {
-    list-style: none;
-    display: inline-block;
-}
 .social-media-icon {
     margin-top: 15px;
 }
@@ -541,21 +633,14 @@ section.footer-1 .col ul li {
 .social-media-icon a:hover {
     color: wheat;
 }
-.footer-1 input#email {
-    border: 1px solid #fff;
-    border-radius: 20px;
-    margin-bottom: 12px;
-    width: 95%;
-    padding: 10px 0px;
-}
 footer h3 {
     line-height: 25px;
+    width: 100%;
+    text-align: center;
 }
 .footer-button {
     padding-right: 335px;
 }
-span.copyright {
-    margin-top: 20px;
-}
+
 
 /* Bootstrap */ 
