--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -14,7 +14,7 @@ html body {
     width: 1000px;
     margin: 0 auto;
 }
-.header{
+.home.header{
     background-image: url('../images/background\ sunset.jpg');
 }
 .left img {
@@ -106,41 +106,6 @@ h1 {
 }
 
 
-/* Banner Style-2*/
-.banner-section2 {
-    background-image: url('../images/About.html2.png');
-    color: #990505;
-    background-repeat: no-repeat;
-    background-size: cover;
-    text-align: center;
-    padding-bottom: 100px;
-}
-.banner2 {
-    padding: 219px 479px 167px 107px;
-}
-h1 {
-    margin-left: 0px;
-    font-size: 50px;
-}
-
-/* Banner Style-3*/
-.banner-section3 {
-    background-image: url('../images/Album2.jpg');
-    color: pink;
-    background-repeat: no-repeat;
-    background-size: cover;
-    text-align: center;
-}
-.banner3 {
-    padding: 219px 479px 167px 107px;
-}
-.banner3 h1 {
-    margin-left: 385px;
-    font-size: 94px;
-
-}
-
-
 /* About Style*/
 section.about-section {
     padding: 30px;
@@ -168,58 +133,6 @@ section.about-section {
     width: 105%;
     border-radius: 100%;
 }
-
-/* Bootstrap Album*/
-.bd-placeholder-img {
-    font-size: 1.125rem;
-    text-anchor: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
-  }
-
-  @media (min-width: 768px) {
-    .bd-placeholder-img-lg {
-      font-size: 3.5rem;
-    }
-  }
-
-  .b-example-divider {
-    height: 3rem;
-    background-color: rgba(0, 0, 0, .1);
-    border: solid rgba(0, 0, 0, .15);
-    border-width: 1px 0;
-    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-  }
-
-  .b-example-vr {
-    flex-shrink: 0;
-    width: 1.5rem;
-    height: 100vh;
-  }
-
-  .bi {
-    vertical-align: -.125em;
-    fill: currentColor;
-  }
-
-  .nav-scroller {
-    position: relative;
-    z-index: 2;
-    height: 2.75rem;
-    overflow-y: hidden;
-  }
-
-  .nav-scroller .nav {
-    display: flex;
-    flex-wrap: nowrap;
-    padding-bottom: 1rem;
-    margin-top: -1px;
-    overflow-x: auto;
-    text-align: center;
-    white-space: nowrap;
-    -webkit-overflow-scrolling: touch;
-  }
 
 
 
@@ -460,7 +373,7 @@ section.Album-section p {
     background-size: cover;
 }
 
-/* Favorite Styles
+/* Favorite Styles*/
 section.skills-section h2 {
     text-align: center;
     padding-right: 145px;
@@ -491,58 +404,6 @@ section.skills-section .row {
 section.skills-section .row-2 {
     margin-top: 40px;
     margin-left: 40px;
-}*/
-
-/*favorite Styles*/
-.bd-placeholder-img {
-  font-size: 1.125rem;
-  text-anchor: middle;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none;
-}
-
-@media (min-width: 768px) {
-  .bd-placeholder-img-lg {
-    font-size: 3.5rem;
-  }
-}
-
-.b-example-divider {
-  height: 3rem;
-  background-color: rgba(0, 0, 0, .1);
-  border: solid rgba(0, 0, 0, .15);
-  border-width: 1px 0;
-  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-}
-
-.b-example-vr {
-  flex-shrink: 0;
-  width: 1.5rem;
-  height: 100vh;
-}
-
-.bi {
-  vertical-align: -.125em;
-  fill: currentColor;
-}
-
-.nav-scroller {
-  position: relative;
-  z-index: 2;
-  height: 2.75rem;
-  overflow-y: hidden;
-}
-
-.nav-scroller .nav {
-  display: flex;
-  flex-wrap: nowrap;
-  padding-bottom: 1rem;
-  margin-top: -1px;
-  overflow-x: auto;
-  text-align: center;
-  white-space: nowrap;
-  -webkit-overflow-scrolling: touch;
 }
 
 
