--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -72,6 +72,12 @@ nav.header-navigation a:hover {
     word-spacing: 27px;
     font-style: italic;
 }
+.logo-container-favorites img {
+    float: left;
+    margin-left: -203px;
+    display: inline-block;
+    width: 100px;
+}
 
 /* Paragraph Styles*/
 @import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
@@ -549,4 +555,101 @@ footer h3 {
 }
 main {
     background-color: peachpuff;
+}
+h2.featurette-heading.fw-normal.lh-1 {
+    color: crimson;
+    font-family: 'boxicons';
+}
+h1 {
+    font-style: italic;
+    font-family: 'boxicons';
+}
+.text-start {
+    text-align: right!important;
+}
+.lead {
+    font-style: italic;
+    font-size: 1.75rem;
+    font-weight: 300;
+    color: brown;
+    font-family: 'boxicons';
+    text-align: center;
+}
+p.about {
+    font-size: large;
+    font-family: inherit;
+    text-align: start;
+    color: black;
+}
+.marketing .col-lg-4 p {
+    font-style: oblique;
+    margin-right: .75rem;
+    margin-left: .75rem;
+    color: brown;
+    font-size: 1.50rem;
+}
+
+/*bootstrap product*/
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+
+      .b-example-divider {
+        height: 3rem;
+        background-color: rgba(0, 0, 0, .1);
+        border: solid rgba(0, 0, 0, .15);
+        border-width: 1px 0;
+        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+      }
+
+      .b-example-vr {
+        flex-shrink: 0;
+        width: 1.5rem;
+        height: 100vh;
+      }
+
+      .bi {
+        vertical-align: -.125em;
+        fill: currentColor;
+      }
+
+      .nav-scroller {
+        position: relative;
+        z-index: 2;
+        height: 2.75rem;
+        overflow-y: hidden;
+      }
+
+      .nav-scroller .nav {
+        display: flex;
+        flex-wrap: nowrap;
+        padding-bottom: 1rem;
+        margin-top: -1px;
+        overflow-x: auto;
+        text-align: center;
+        white-space: nowrap;
+        -webkit-overflow-scrolling: touch;
+      }
+      .text-bg-primary {
+        color: palevioletred;
+        background-color: aquamarine;
+    }
+    h2.display-5 {
+        color: crimson;
+        font-style: italic;
+        font-family: initial;
+    }
+    @media (min-width: 1200px)
+    .display-5 {
+    font-size: 2.25rem;
 }
