--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -366,7 +366,7 @@ section.skills-section h2 {
     font-size: 45px;
 }
 section.skills-section {
-    background-image: url('../images/drop.jpg'); 
+    background-image: url('../images/contacts.jpg'); 
     padding: 30px 10px 60px;
     text-align: center;
 }
