--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -42,7 +42,7 @@ header {
     background-attachment: inherit;
     background-size: cover;
     padding-left: 0px;
-    background-color: peachpuff;
+    background-color: crimson;
 }
 nav.header-navigation {
     width: 100%;
@@ -50,13 +50,15 @@ nav.header-navigation {
     margin-top: 50px;
 }
 nav.header-navigation a {
-    font-size: 16px;
+    font-size: 19px;
     margin: 13px;
-    color: black;
+    color: blanchedalmond;
+    font-family: cursive;
+    font-style: initial;
 }
 nav.header-navigation a:hover {
     font-weight: 900;
-    color: salmon;
+    color: black;
     text-decoration-line: underline;
 }
 .logo-container img{
@@ -95,11 +97,17 @@ h2 {
     font-size: 50px;
     text-align: center;
 }
+h4 {
+    text-transform: uppercase;
+    font-size: 50px;
+    width: 60%;
+    float: left;
+}
 
 
-/* Banner Style*/
-.banner-section {
-    background-image: url('../images/background\ sunset.jpg');
+
+/*contacts banner*/
+.banner-section-account {
     color: #990505;
     background-repeat: no-repeat;
     background-size: cover;
@@ -111,6 +119,76 @@ h2 {
 h1 {
     margin-left: 0px;
     font-size: 50px;
+}
+header#contacts-header{
+    padding: 20px;
+    background-attachment: inherit;
+    background-size: cover;
+    padding-left: 0px;
+    background-image: url('../images/contacts.me.jpg');
+}
+/*album banner*/
+.banner-section-album {
+    color: #990505;
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align: center;
+}
+.banner {
+    padding: 219px 479px 167px 107px;
+}
+h1 {
+    margin-left: 0px;
+    font-size: 50px;
+}
+header#album-header{
+    padding: 20px;
+    background-attachment: inherit;
+    background-size: cover;
+    padding-left: 0px;
+    background-image: url('../images/Album2.jpg');
+}
+/*favorites banner*/
+.banner-section-album {
+    color: #990505;
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align: center;
+}
+.banner {
+    padding: 219px 479px 167px 107px;
+}
+h1 {
+    margin-left: 0px;
+    font-size: 50px;
+}
+header#favorites-header{
+    padding: 20px;
+    background-attachment: inherit;
+    background-size: cover;
+    padding-left: 0px;
+    background-image: url('../images/background\ about.jpg');
+}
+/*Home banner*/
+.banner-section-album {
+    color: #990505;
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align: center;
+}
+.banner {
+    padding: 427px 479px 167px 107px;
+}
+h1 {
+    margin-left: 0px;
+    font-size: 50px;
+}
+header#home-header{
+    padding: 20px;
+    background-attachment: inherit;
+    background-size: cover;
+    padding-left: 0px;
+    background-image: url('../images/homw.png');
 }
 
 
@@ -127,6 +205,13 @@ section.Album-section {
     text-align: center;
     background-image: url('../images/skills.jpg');
 }
+h5 {
+    font-style: oblique;
+    text-align: end;
+    font-size: 90px;
+    font-family: 'boxicons';
+    color: blanchedalmond;
+}
 section.Album-section h2 {
     padding-top: 60px;
     padding-bottom: 50px;
@@ -134,6 +219,11 @@ section.Album-section h2 {
     padding-left: 75px;
     font-size: 35px;
     font-family: serif;
+}
+h3 {
+    font-size: 30px;
+    font-style: italic;
+    font-family: emoji;
 }
 .row-2 {
     margin-top: 40px;
@@ -358,6 +448,13 @@ section.Album-section p {
 }
 
 /* Favorite Styles*/
+h7 {
+    width: 100%;
+    text-align: end;
+    font-size: 135px;
+    font-family: 'boxicons';
+    color: black;
+}
 section.skills-section h2 {
     text-align: center;
     padding-right: 145px;
@@ -393,7 +490,13 @@ section.skills-section .row-2 {
 
 
 /* Contact Styles */
-
+h6 {
+    width: 100%;
+    text-align: end;
+    font-size: 88px;
+    font-family: 'boxicons';
+    color: antiquewhite;
+}
 section#contact {
     background-size: cover;
     background-attachment: inherit;
